# grime

./: CMakeLists.txt  README.md
doc/: codingStandards.md  everythingIsAnExpr.md  nameMangling.md  objects.md  syntax.md
docs/: codingStandards.md  index.md  literals.md  nameMangling.md  rap.md  syntax.md
example/: a.out  example.grime  example.ll  example.s
src/compiler/: codegen.c  codegen.h  codegenerator.c  lex.yy.c  lexer.c  lexer.l  main.c  match.c  node.c  node.h  parser.c  parser.output  parser.tab.c  parser.tab.h  parser.y  token.c
src/compiler/semantics/: type.c  var.c
src/core/: core.c  core.ll  expr.grime  test.c  test.ll  types.grime  types.ll
src/std/: maths.grime  print.grime  string.grime
src/testfiles/: test.grime
